datatable, row buttons, table css, header buttons

--- a/config/app.ini
+++ b/config/app.ini
@@ -1,5 +1,5 @@
 host="localhost"
 database="mysql"
-database_name="db_project_managemnt" 
+database_name="db_project_management" 
 user="root"
 password=""
